--- a/comms/asterisk-sounds-extra/Makefile
+++ b/comms/asterisk-sounds-extra/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2005/09/30 21:17:23 mjl Exp $
 #
 
 VER=			1.0.9
@@ -9,7 +9,7 @@ MASTER_SITES=		http://ftp1.digium.com/pub/asterisk/ \
 			http://ftp2.digium.com/pub/asterisk/
 
 
-MAINTAINER=		tech-pkg@netbsd.org
+MAINTAINER=		tech-pkg@NetBSD.org
 HOMEPAGE=		http://ftp.digium.com/pub/asterisk/
 COMMENT=		Asterisk IVR and miscellaneous sound files.
 
