--- a/net/netgroup/Makefile
+++ b/net/netgroup/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.7 2004/12/03 15:15:06 wiz Exp $
+# $NetBSD: Makefile,v 1.1 2004/12/21 21:06:40 christos Exp $
 #
 
 DISTNAME=	netgroup-0.0
 CATEGORIES=	net
 MASTER_SITES=	ftp://ftp.astron.com/pub/netgroup/
 
-MAINTAINER=	christos@netbsd.org
+MAINTAINER=	christos@NetBSD.org
 COMMENT=	Netgroup membership listing and testing functions
 
 .include "../../mk/bsd.prefs.mk"
