--- a/graphics/xli/Makefile
+++ b/graphics/xli/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.28 2005/03/21 15:19:28 salo Exp $
+# $NetBSD: Makefile,v 1.29 2005/04/11 21:46:10 tv Exp $
 
 DISTNAME=	xli-2005-02-27
 PKGNAME=	xli-1.17.0
@@ -11,6 +11,7 @@ HOMEPAGE=	http://pantransit.reptiles.org/prog/
 COMMENT=	X11 Image Loading Utility
 
 USE_IMAKE=	YES
+INSTALLATION_DIRS+=	lib/X11/app-defaults
 
 .include "../../graphics/jpeg/buildlink3.mk"
 .include "../../graphics/png/buildlink3.mk"
