--- a/inputmethod/imhangul/Makefile
+++ b/inputmethod/imhangul/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2005/08/10 20:56:18 jlam Exp $
+# $NetBSD: Makefile,v 1.12 2005/08/26 02:19:31 minskim Exp $
 
-DISTNAME=	imhangul-0.9.12
+DISTNAME=	imhangul-0.9.13
 CATEGORIES=	inputmethod korean
-MASTER_SITES=	http://kldp.net/frs/download.php/2570/
+MASTER_SITES=	http://kldp.net/frs/download.php/2808/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	minskim@NetBSD.org
