--- a/sysutils/findutils/Makefile
+++ b/sysutils/findutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2005/04/11 21:47:23 tv Exp $
+# $NetBSD: Makefile,v 1.18 2005/10/04 18:31:29 reed Exp $
 
 DISTNAME=	findutils-4.1
 PKGREVISION=	4
@@ -13,10 +13,17 @@ GNU_CONFIGURE=		YES
 CONFIGURE_HAS_INFODIR=	NO
 CONFIGURE_HAS_MANDIR=	NO
 MAKE_ENV+=		INFO_DIR=${INFO_DIR}
+LDFLAGS.IRIX+=		-lgen
 
 INFO_FILES=		find.info
 
 .include "../../mk/bsd.prefs.mk"
+
+.if ${OPSYS} == "IRIX"
+PLIST_SUBST+=	USE_CATMAN="@comment "
+.else
+PLIST_SUBST+=	USE_CATMAN=""
+.endif
 
 .if defined(GNU_PROGRAM_PREFIX)
 CONFIGURE_ARGS+=	--program-prefix=${GNU_PROGRAM_PREFIX}
