--- a/www/squidpurge/Makefile
+++ b/www/squidpurge/Makefile
@@ -1,19 +1,18 @@
-# $NetBSD: Makefile,v 1.1.1.1 2005/10/11 00:45:39 gdt Exp $
+# $NetBSD: Makefile,v 1.2 2005/10/11 09:09:07 wiz Exp $
 #
 
-DISTNAME=		purge-${PURGEVERSION}-src
-PKGNAME=		squidpurge-${PURGEVERSION}
-PKGREVISION=		1
-CATEGORIES=		www
-MASTER_SITES=		http://www.wa.apana.org.au/~dean/sources/
+DISTNAME=	purge-${PURGEVERSION}-src
+PKGNAME=	squidpurge-0.${PURGEVERSION}
+CATEGORIES=	www
+MASTER_SITES=	http://www.wa.apana.org.au/~dean/sources/
 
-MAINTAINER=		gdt@NetBSD.org
-HOMEPAGE=		http://www.wa.apana.org.au/~dean/squidpurge/
-COMMENT=		Squid cache tool to list, extract or purge objects
+MAINTAINER=	gdt@NetBSD.org
+HOMEPAGE=	http://www.wa.apana.org.au/~dean/squidpurge/
+COMMENT=	Squid cache tool to list, extract or purge objects
 
-PURGEVERSION=		20040201
+PURGEVERSION=	20040201
 
-WRKSRC=			${WRKDIR}/purge
+WRKSRC=		${WRKDIR}/purge
 
 USE_TOOLS+=	gmake
 
