--- a/www/lighttpd/Makefile
+++ b/www/lighttpd/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.1.1.1 2005/09/04 06:37:05 jlam Exp $
+# $NetBSD: Makefile,v 1.2 2005/09/28 12:27:52 rillig Exp $
 
-DISTNAME=	lighttpd-1.4.3
+DISTNAME=	lighttpd-1.4.6
 CATEGORIES=	www
 MASTER_SITES=	http://www.lighttpd.net/download/
 
-MAINTAINER=	tech-pkg@NetBSD.org
+MAINTAINER=	joerg@NetBSD.org
 HOMEPAGE=	http://www.lighttpd.net/
 COMMENT=	Fast, light-footprint HTTP server
 
