--- a/x11/numlockx/Makefile
+++ b/x11/numlockx/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2005/04/11 21:48:12 tv Exp $
+# $NetBSD: Makefile,v 1.3 2005/06/01 18:03:29 jlam Exp $
 #
 
-DISTNAME=		numlockx-1.0
+DISTNAME=		numlockx-1.1
 CATEGORIES=		x11
 MASTER_SITES=		http://ktown.kde.org/~seli/numlockx/
 
