--- a/net/p5-Socket6/Makefile
+++ b/net/p5-Socket6/Makefile
@@ -1,15 +1,14 @@
-# $NetBSD: Makefile,v 1.19 2005/07/13 18:01:37 jlam Exp $
+# $NetBSD: Makefile,v 1.20 2005/08/06 06:19:28 jlam Exp $
 #
 
-DISTNAME=		Socket6-0.17
-PKGNAME=		p5-Socket6-0.17
+DISTNAME=		Socket6-0.19
+PKGNAME=		p5-Socket6-0.19
 SVR4_PKGNAME=		p5so6
-PKGREVISION=		2
 CATEGORIES=		net perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Socket6/}
 
 MAINTAINER=		tech-pkg@NetBSD.org
-HOMEPAGE=		http://theory.uwinnipeg.ca/CPAN/data/libnet/FAQ.html
+HOMEPAGE=		http://search.cpan.org/~umemoto/${DISTNAME}/
 COMMENT=		Perl5 module to support getaddrinfo() and getnameinfo()
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
