--- a/net/ripe-whois-tools/Makefile
+++ b/net/ripe-whois-tools/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.4 2004/01/20 12:22:21 agc Exp $
+# $NetBSD: Makefile,v 1.5 2004/01/27 13:40:03 grant Exp $
 #
 
 DISTNAME=	ripe-whois-tools-2.4
 CATEGORIES=	net
 MASTER_SITES=	ftp://ftp.ripe.net/tools/
 
-MAINTAINER=	seb@pbox.org
+MAINTAINER=	seb@NetBSD.org
 HOMEPAGE=	http://www.ripe.net/ripencc/pub-services/db/
 COMMENT=	RIPE WHOIS client and tools
 
