--- a/net/tcpslice/Makefile
+++ b/net/tcpslice/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.4 2004/04/25 07:39:25 snj Exp $
+# $NetBSD: Makefile,v 1.5 2005/04/11 21:47:00 tv Exp $
 
 DISTNAME=	tcpslice-1.2a1
 PKGNAME=	tcpslice-1.2.0.1
 CATEGORIES=	net
 MASTER_SITES=	ftp://ftp.ee.lbl.gov/
 
-MAINTAINER=	seb@pbox.org
+MAINTAINER=	seb@NetBSD.org
 COMMENT=	Tool for extracting portions of tcpdump's packet trace files
 
 GNU_CONFIGURE=	YES
