--- a/x11/xphoon/Makefile
+++ b/x11/xphoon/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2004/04/19 05:09:55 snj Exp $
+# $NetBSD: Makefile,v 1.15 2005/04/11 21:48:16 tv Exp $
 #
 
 DISTNAME=	xphoon.tar
@@ -10,7 +10,7 @@ MASTER_SITES=	ftp://ftp.x.org/R5contrib/ \
 		ftp://ftp.sunet.se/pub/X11/
 EXTRACT_SUFX=	.Z
 
-MAINTAINER=	seb@pbox.org
+MAINTAINER=	seb@NetBSD.org
 COMMENT=	Set the root window to the moon in its current phase
 
 WRKSRC=		${WRKDIR}/xphoon
