--- a/graphics/gnome-icon-theme/Makefile
+++ b/graphics/gnome-icon-theme/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.26 2005/07/16 01:19:11 jlam Exp $
+# $NetBSD: Makefile,v 1.27 2005/10/10 13:44:10 jmmv Exp $
 #
 
-DISTNAME=		gnome-icon-theme-2.12.0
+DISTNAME=		gnome-icon-theme-2.12.1
 CATEGORIES=		graphics gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gnome-icon-theme/2.12/}
 EXTRACT_SUFX=		.tar.bz2
