--- a/devel/libwnck/Makefile
+++ b/devel/libwnck/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.29 2005/08/10 20:56:15 jlam Exp $
+# $NetBSD: Makefile,v 1.30 2005/08/26 16:25:05 drochner Exp $
 #
 
-DISTNAME=	libwnck-2.10.3
+DISTNAME=	libwnck-2.12.1
 CATEGORIES=	devel x11 gnome
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libwnck/2.10/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libwnck/2.12/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	jmmv@NetBSD.org
