--- a/devel/eel2/Makefile
+++ b/devel/eel2/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.42 2005/07/21 16:29:46 wiz Exp $
+# $NetBSD: Makefile,v 1.43 2005/08/10 20:56:14 jlam Exp $
 
-DISTNAME=	eel-2.10.1
+DISTNAME=	eel-2.12.1
 PKGNAME=	${DISTNAME:S/-/2-/}
 CATEGORIES=	devel gnome
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/eel/2.10/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/eel/2.12/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	tech-pkg@NetBSD.org
