--- a/graphics/gnome-backgrounds/Makefile
+++ b/graphics/gnome-backgrounds/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.4 2005/05/22 20:08:05 jlam Exp $
+# $NetBSD: Makefile,v 1.5 2005/08/26 17:22:26 drochner Exp $
 #
 
-DISTNAME=	gnome-backgrounds-2.10.2
+DISTNAME=	gnome-backgrounds-2.12.1
 CATEGORIES=	graphics gnome
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gnome-backgrounds/2.10/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gnome-backgrounds/2.12/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	jmmv@NetBSD.org
