--- a/x11/gnome2-terminal/Makefile
+++ b/x11/gnome2-terminal/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.41 2005/07/21 16:30:00 wiz Exp $
+# $NetBSD: Makefile,v 1.42 2005/08/10 20:56:26 jlam Exp $
 #
 
-DISTNAME=		gnome-terminal-2.10.0
+DISTNAME=		gnome-terminal-2.12.0
 PKGNAME=		${DISTNAME:S/-/2-/}
 CATEGORIES=		x11 gnome
-MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gnome-terminal/2.10/}
+MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gnome-terminal/2.12/}
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		jmmv@NetBSD.org
