--- a/multimedia/libtheora/Makefile
+++ b/multimedia/libtheora/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.5 2005/02/09 13:53:36 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2005/04/11 21:46:42 tv Exp $
 #
 
-DISTNAME=	libtheora-1.0alpha4
+DISTNAME=	libtheora-1.0alpha5
 CATEGORIES=	multimedia
 MASTER_SITES=	http://downloads.xiph.org/releases/theora/
 EXTRACT_SUFX=	.tar.bz2
@@ -10,9 +10,10 @@ MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.theora.org/
 COMMENT=	Video codec for Ogg multimedia streaming
 
-GNU_CONFIGURE=	YES
+GNU_CONFIGURE=		YES
 PKGCONFIG_OVERRIDE=	theora.pc.in
-USE_LIBTOOL=	YES
+USE_LIBTOOL=		YES
+TEST_TARGET=		check
 
 .include "../../audio/libvorbis/buildlink3.mk"
 .include "../../multimedia/libogg/buildlink3.mk"
