--- a/misc/yelp/Makefile
+++ b/misc/yelp/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.33 2005/07/21 16:29:53 wiz Exp $
+# $NetBSD: Makefile,v 1.34 2005/08/10 20:56:20 jlam Exp $
 #
 
 DISTNAME=		yelp-2.10.0
+PKGREVISION=		1
 CATEGORIES=		misc
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/yelp/2.10/}
 EXTRACT_SUFX=		.tar.bz2
