--- a/net/bug-buddy/Makefile
+++ b/net/bug-buddy/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.35 2005/08/10 20:56:21 jlam Exp $
+# $NetBSD: Makefile,v 1.36 2005/09/23 20:08:05 wiz Exp $
 #
 
 DISTNAME=		bug-buddy-2.10.0
+PKGREVISION=		1
 CATEGORIES=		net gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/bug-buddy/2.10/}
 EXTRACT_SUFX=		.tar.bz2
