--- a/math/Makefile
+++ b/math/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.136 2005/10/02 12:08:37 wulf Exp $
+# $NetBSD: Makefile,v 1.137 2005/10/11 13:31:10 adam Exp $
 #
 
 COMMENT=	Mathematics
@@ -70,6 +70,7 @@ SUBDIR+=	p5-Math-Base85
 SUBDIR+=	p5-Math-Bezier
 SUBDIR+=	p5-Math-BigInteger
 SUBDIR+=	p5-Math-FFT
+SUBDIR+=	p5-Math-GMP
 SUBDIR+=	p5-Math-Interpolate
 SUBDIR+=	p5-Math-MatrixReal
 SUBDIR+=	p5-Math-Pari
