--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.411 2005/10/11 00:55:39 gdt Exp $
+# $NetBSD: Makefile,v 1.412 2005/10/12 21:51:17 jmmv Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -80,6 +80,7 @@ SUBDIR+=	curl
 SUBDIR+=	cvsweb
 SUBDIR+=	dillo
 SUBDIR+=	drivel
+SUBDIR+=	drraw
 SUBDIR+=	elinks
 SUBDIR+=	elinks04
 SUBDIR+=	emacs-w3m
