--- a/x11/kdelibs3/Makefile
+++ b/x11/kdelibs3/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.91 2005/07/30 11:04:59 markd Exp $
+# $NetBSD: Makefile,v 1.92 2005/08/20 19:16:22 jlam Exp $
 
 DISTNAME=	kdelibs-${_KDE_VERSION}
-PKGREVISION=	1
 CATEGORIES=	x11
 COMMENT=	Support libraries for the KDE integrated X11 desktop
 
