--- a/audio/arts/Makefile
+++ b/audio/arts/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.47 2005/09/08 15:51:40 jdc Exp $
+# $NetBSD: Makefile,v 1.48 2005/09/08 16:24:15 schmonz Exp $
 
-DISTNAME=	arts-1.4.2
+DISTNAME=	arts-1.4.3
 CATEGORIES=	audio
 HOMEPAGE=	http://www.kde.org/areas/multimedia/
 COMMENT=	Analog Real-Time Synthesizer
