--- a/comms/synce-dccm/Makefile
+++ b/comms/synce-dccm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2005/10/13 15:05:16 wiz Exp $
 #
 
 DISTNAME=		synce-dccm-0.9.1
@@ -7,7 +7,7 @@ MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=synce/}
 
 MAINTAINER=		wiz@NetBSD.org
 HOMEPAGE=		http://synce.sourceforge.net/
-COMMENT=		SynCE communication application
+COMMENT=		Listener daemon for connections from WinCE devices
 
 USE_LIBTOOL=		yes
 GNU_CONFIGURE=		yes
