--- a/net/gftp/Makefile
+++ b/net/gftp/Makefile
@@ -1,13 +1,15 @@
-# $NetBSD: Makefile,v 1.19 2004/04/05 02:45:45 xtraeme Exp $
+# $NetBSD: Makefile,v 1.20 2004/04/14 16:15:26 jmmv Exp $
 #
 
 .include "${.CURDIR}/Makefile.common"
 
 COMMENT=	Multithreaded GTK2+ ftp client
+PKGREVISION=	1
 
 CONFLICTS=	gftp-gtk1-[0-9]*
 
 USE_DIRS+=	gnome2-1.5
 
+.include "../../devel/glib2/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
