--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.308 2005/10/01 18:29:04 agc Exp $
+# $NetBSD: Makefile,v 1.309 2005/10/12 18:54:09 xtraeme Exp $
 #
 
 COMMENT=	System utilities
@@ -225,6 +225,7 @@ SUBDIR+=	xdu
 SUBDIR+=	xen12
 SUBDIR+=	xentools12
 SUBDIR+=	xentools20
+SUBDIR+=	xenkernel20
 SUBDIR+=	xenvstat
 SUBDIR+=	xfce4-appfinder
 SUBDIR+=	xfce4-cpugraph-plugin
