--- a/inputmethod/nabi/Makefile
+++ b/inputmethod/nabi/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.19 2005/07/21 16:29:52 wiz Exp $
+# $NetBSD: Makefile,v 1.20 2005/08/10 20:56:18 jlam Exp $
 #
 
 DISTNAME=		nabi-0.15
 CATEGORIES=		korean inputmethod
-MASTER_SITES=		http://download.kldp.net/nabi/
+MASTER_SITES=		http://kldp.net/frs/download.php/1651/
 
 MAINTAINER=		minskim@NetBSD.org
 HOMEPAGE=		http://nabi.kldp.net/
