--- a/net/vcheck/Makefile
+++ b/net/vcheck/Makefile
@@ -1,13 +1,12 @@
-# $NetBSD: Makefile,v 1.9 2005/07/13 18:01:37 jlam Exp $
+# $NetBSD: Makefile,v 1.10 2005/08/06 06:19:29 jlam Exp $
 #
 
 DISTNAME=		vcheck-1.2.1
 PKGREVISION=		2
 CATEGORIES=		net perl5
-MASTER_SITES=		http://www.stud.tu-ilmenau.de/~gomar/stuff/vcheck/
+MASTER_SITES=		http://keyserver.kjsl.com/~jharris/distfiles/
 
 MAINTAINER=		seb@NetBSD.org
-HOMEPAGE=		http://www.stud.tu-ilmenau.de/~gomar/stuff/vcheck/
 COMMENT=		Latest program version checker and auto-downloader
 
 DEPENDS+=		p5-libwww>=5.69nb1:../../www/p5-libwww
