--- a/net/p5-SNMP-MIB-Compiler/Makefile
+++ b/net/p5-SNMP-MIB-Compiler/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.6 2005/07/13 18:01:37 jlam Exp $
+# $NetBSD: Makefile,v 1.7 2005/08/06 06:19:28 jlam Exp $
 #
 
 DISTNAME=	SNMP-MIB-Compiler-0.06
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	net perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=SNMP/}
 
@@ -12,7 +12,7 @@ HOMEPAGE=	http://search.cpan.org/dist/SNMP-MIB-Compiler/
 COMMENT=	MIB Compiler supporting SMIv1 and SMIv2
 
 
-PERL5_PACKLIST=		auto/Net/SNMP/Mib/Compiler/.packlist
+PERL5_PACKLIST=		auto/SNMP/MIB/Compiler/.packlist
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
